--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 
 <body>
     
-
+    <h1>WELCOME TO MY CHAT APPLICATION!</h1>
     <div class="container">
+<!--      
         <div class="message right">nikhil: hello i am nikhil</div>
         <div class="message left">naman: hello i am naman</div>
+      -->
     </div>
 
     <div class="send">
